--- a/src/app/page/our-process/our-process.component.html
+++ b/src/app/page/our-process/our-process.component.html
@@ -14,7 +14,7 @@
 <section class = "process-section">
     <div class ="container">
         <div class = "box text-center">
-             <h2>{{page.singletitle1}}</h2>
+             <h2>{{page[0].singletitle1}}</h2>
 
         </div>
     </div>
@@ -27,13 +27,13 @@
        <div class = "row">
            <div class = "col-lg-6 col-12">
              <div class = "col1">
-                 <h1>{{page.rugsproducttitle1}}</h1>
-                 <h3>{{page.rugsproductbuttonname1}}</h3>
+                 <h1>{{page[0].rugsproducttitle1}}</h1>
+                 <h3>{{page[0].rugsproductbuttonname1}}</h3>
              </div>
            </div>
            <div class = "col-lg-6 col-12">
                <div class = "box">
-                   <img src = "{{page.rugsproductproductimage1}}" alt = "img">
+                   <img src = "{{page[0].rugsproductproductimage1}}" alt = "img">
                </div>
           </div>
        </div>
@@ -47,13 +47,13 @@
        <div class = "row flex-column-reverse flex-lg-row flex-md-row">
         <div class = "col-lg-6 col-12">
              <div class = "box">
-                <img src = "{{page.processproductimage2}}" alt = "img">
+                <img src = "{{page[0].processproductimage2}}" alt = "img">
              </div>
         </div>
         <div class = "col-lg-6 col-12">
           <div class = "col2">
-              <h1>{{page.processtitle2}}</h1>
-              <h3>{{page.processbuttonname2}}</h3>
+              <h1>{{page[0].processtitle2}}</h1>
+              <h3>{{page[0].processbuttonname2}}</h3>
           </div>
         </div>
     </div>
@@ -65,7 +65,7 @@
 <section class = "process-section">
     <div class ="container">
         <div class = "box text-center">
-             <h2>{{page.singletitle2}}</h2>
+             <h2>{{page[0].singletitle2}}</h2>
         </div>
     </div>
 </section>
@@ -77,13 +77,13 @@
        <div class = "row">
            <div class = "col-lg-6 col-12">
              <div class = "col1">
-                 <h1>{{page.processtitle3}}</h1>
-                 <h3>{{page.processbuttonname3}}</h3>
+                 <h1>{{page[0].processtitle3}}</h1>
+                 <h3>{{page[0].processbuttonname3}}</h3>
              </div>
            </div>
            <div class = "col-lg-6 col-12">
                <div class = "box">
-                   <img src = "{{page.processproductimage3}}" alt = "img">
+                   <img src = "{{page[0].processproductimage3}}" alt = "img">
                </div>
           </div>
        </div>
@@ -97,13 +97,13 @@
        <div class = "row flex-column-reverse flex-lg-row flex-md-row">
         <div class = "col-lg-6 col-12">
              <div class = "box">
-                <img src = "{{page.processproductimage4}}" alt = "img">
+                <img src = "{{page[0].processproductimage4}}" alt = "img">
              </div>
         </div>
         <div class = "col-lg-6 col-12">
           <div class = "col2">
-              <h1>{{page.processtitle4}}</h1>
-              <h3>{{page.processbuttonname4}}</h3>
+              <h1>{{page[0].processtitle4}}</h1>
+              <h3>{{page[0].processbuttonname4}}</h3>
           </div>
         </div>
     </div>
@@ -115,7 +115,7 @@
 <section class = "process-section">
     <div class ="container">
         <div class = "box text-center">
-             <h2>{{page.singletitle3}}</h2>
+             <h2>{{page[0].singletitle3}}</h2>
         </div>
     </div>
 </section>
@@ -127,14 +127,14 @@
        <div class = "row">
            <div class = "col-lg-6 col-12">
              <div class = "col1">
-                 <h1>{{page.processtitle5}}</h1>
+                 <h1>{{page[0].processtitle5}}</h1>
 
-                <h3>{{page.processbuttonname5}}</h3>
+                <h3>{{page[0].processbuttonname5}}</h3>
              </div>
            </div>
            <div class = "col-lg-6 col-12">
                <div class = "box">
-                   <img src = "{{page.processproductimage5}}" alt = "img">
+                   <img src = "{{page[0].processproductimage5}}" alt = "img">
                </div>
           </div>
        </div>
@@ -148,13 +148,13 @@
        <div class = "row flex-column-reverse flex-lg-row flex-md-row">
         <div class = "col-lg-6 col-12">
              <div class ="box">
-                <img src = "{{page.processproductimage6}}" alt = "img">
+                <img src = "{{page[0].processproductimage6}}" alt = "img">
              </div>
         </div>
         <div class = "col-lg-6 col-12">
           <div class = "col2">
-              <h1>{{page.processtitle6}}</h1>
-              <h3>{{page.processbuttonname6}}</h3>
+              <h1>{{page[0].processtitle6}}</h1>
+              <h3>{{page[0].processbuttonname6}}</h3>
           </div>
         </div>
     </div>
