--- a/src/app/page/visit-us/the-studio/the-studio.component.scss
+++ b/src/app/page/visit-us/the-studio/the-studio.component.scss
@@ -4,6 +4,11 @@ h2{&:after{content: "";position: relative;display: block;width: 40px;height: 3px
 .col1{padding:10rem 2rem 0rem 0rem;}
   .col2{padding:10rem 0rem 0rem 2rem;}
 
+.slider_img {
+    display: block;
+    height: 500px;
+    object-fit: cover;
+}
   /*********===========Visit Us(Studio) SCSS===========******/
   #studio-banner-slider {
 	padding-top: 0px;
@@ -19,7 +24,7 @@ h2{&:after{content: "";position: relative;display: block;width: 40px;height: 3px
        right: 0;
        bottom: 0;
 	   background-color: #38494d99;
-     
+
 	}
 	.container{
 	  max-width: 700px !important;
@@ -39,7 +44,7 @@ h2{&:after{content: "";position: relative;display: block;width: 40px;height: 3px
 	  }
 	}
 
-	
+
   }
   /******Studio section1******/
   /******Studio section2******/
