--- a/src/app/page/trade-program/trade-program.component.html
+++ b/src/app/page/trade-program/trade-program.component.html
@@ -1,6 +1,6 @@
 
 <!---------Banner Start---------->
-<app-slider></app-slider>
+<app-banner></app-banner>
 <!---------Banner End---------->
 <hr class = "section_hr">
 <!---------Section1  Start---------->
