--- a/src/app/page/visit-us/the-studio/the-studio.component.html
+++ b/src/app/page/visit-us/the-studio/the-studio.component.html
@@ -1,6 +1,6 @@
 
 <!----------------(Banner Start)------------------>
-<app-slider></app-slider>
+<app-banner></app-banner>
 <!----------------(Banner End)------------------>
 
 <!----------------(studio-section1 Start)---------------->
@@ -258,7 +258,7 @@
         <div class = "col2">
             <h2 class = "text-capitalize">{{page[0].nyctitle}}</h2>
             <p class = "pt-3">{{page[0].nycdescripation}}</p>
-           <button type = "button" class = "btn blue-btn" routerLink = "/visit/apartment">{{page[0].nycbuttonname}}</button>
+           <button type = "button" class = "btn blue-btn" routerLink = "/apartment">{{page[0].nycbuttonname}}</button>
         </div>
      </div>
      </div>
