--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <!----------------(Banner Start)------------------>
-<app-slider></app-slider>
+<app-banner></app-banner>
 <!----------------(Banner End)------------------>
 <hr class = "section_hr">
 <!-----------Section1 Start---------->
