--- a/src/app/page/faq/faq.component.html
+++ b/src/app/page/faq/faq.component.html
@@ -2,7 +2,7 @@
 <section id = "faq_banner">
    <div class = "container">
      <div class = "text-center">
-       <h2>Frequently Asked Questions</h2>
+       <h1 class = "text-light">Frequently Asked Questions</h1>
      </div>
    </div>
  </section>
