--- a/src/app/page/size-guide/size-guide.component.scss
+++ b/src/app/page/size-guide/size-guide.component.scss
@@ -67,7 +67,10 @@ h2{
         max-width: 700px !important;
         table{
             background-color: #fff;
-            margin-bottom: 0rem;
+            margin-bottom: 0rem;   
+        }
+        table>:not(:first-child) {
+            border-top: 0px solid currentColor;
         }
     }
 }
