--- a/src/app/page/visit-us/the-apartment/the-apartment.component.html
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.html
@@ -1,219 +1,210 @@
 <!----------------(Banner Start)------------------>
-<app-slider></app-slider>
+<app-banner></app-banner>
 <!----------------(Banner End)------------------>
-
 <!----------------(studio-section1 Start)---------------->
 <hr class = "section_hr">
 <section id = "apartment-section1" class = "inner_sec1">
-    <div class = "container">
-      <div class = "text-center box">
-        <h2 class = "mb-4">{{page[0].bringingmoroccotitle}}</h2>
-        <p [innerHTML]="page[0].bringingmoroccodescripation"></p>
+  <div class = "container">
+    <div class = "text-center box">
+      <h2 class = "mb-4">{{page[0].bringingmoroccotitle}}</h2>
+      <p [innerHTML]="page[0].bringingmoroccodescripation"></p>
     </div>
-    </div>
+  </div>
 </section>
 <hr class = "section_hr">
 <!----------------(studio-section2 End)------------------>
-
 <!----------------(studio-section3 Start)------------------>
 <section id = "apartment-section2">
-    <div class = "container">
-        <div class = "row flex-column-reverse flex-lg-row">
-            <div class = "col-lg-6 col-12">
-            <div class = "visit-img">
-                <img src = "{{page[0].detailsimage}}" width="100%"  alt = "img">
-            </div>
+  <div class = "container">
+    <div class = "row flex-column-reverse flex-lg-row">
+      <div class = "col-lg-6 col-12">
+        <div class = "visit-img">
+          <img src = "{{page[0].detailsimage}}" width="100%"  alt = "img">
         </div>
-       <div class = "col-lg-6 col-12 ">
-          <div class = "col2 text-start">
-              <h2 class = "text-capitalize">{{page[0].detailstitle}}</h2>
-              <p>{{page[0].detailsdescriaption}}</p>
-          </div>
-       </div>
-
-     </div>
+      </div>
+      <div class = "col-lg-6 col-12 ">
+        <div class = "col2 text-start">
+          <h2 class = "text-capitalize">{{page[0].detailstitle}}</h2>
+          <p>{{page[0].detailsdescriaption}}</p>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
 <!----------------(studio-section3 End)------------------>
 <hr class = "section_hr">
 <!----------------(studio-section4 Start)------------------>
 <section id = "apartment-section3">
-    <div class = "container">
-     <div class = "row">
-       <div class = "col-lg-6 col-12">
+  <div class = "container">
+    <div class = "row">
+      <div class = "col-lg-6 col-12">
         <div class = "col2 text-lg-end text-start">
-            <h2 class = "text-capitalize">{{page[0].leafytitle}}</h2>
-            <p>{{page[0].leafydescriaption}}</p>
+          <h2 class = "text-capitalize">{{page[0].leafytitle}}</h2>
+          <p>{{page[0].leafydescriaption}}</p>
         </div>
-     </div>
-     <div class = "col-lg-6 col-12">
+      </div>
+      <div class = "col-lg-6 col-12">
         <div class = "visit-img">
-            <img src = "{{page[0].leafyimage}}" width="100%"  alt = "img">
+          <img src = "{{page[0].leafyimage}}" width="100%"  alt = "img">
         </div>
+      </div>
     </div>
   </div>
-</div>
 </section>
 <!----------------(Apartmentstudio-section4 End)------------------>
 <hr class = "section_hr">
 <!----------------(Apartment-section5 Start)---------------->
 <section id = "apartment-section4">
-    <div class = "container">
-     <div class = "text-center">
-        <h3>{{page[0].onlydescriaption}}</h3>
-        <h6>{{page[0].onlytitle}}</h6>
+  <div class = "container">
+    <div class = "text-center">
+      <h3>{{page[0].onlydescriaption}}</h3>
+      <h6>{{page[0].onlytitle}}</h6>
     </div>
-    </div>
+  </div>
 </section>
 <!----------------(Apartment-section5 End)---------------->
 <hr class = "section_hr">
 <!----------------(Apartment-section6 Start)------------------>
 <section id = "apartment-section5">
-    <div class = "container">
-     <div class = "row">
-       <div class = "col-lg-6 col-12 ">
+  <div class = "container">
+    <div class = "row">
+      <div class = "col-lg-6 col-12 ">
         <div class = "col2">
-            <h2>{{page[0].expecttitle}}</h2>
-            <p>{{page[0].expectdescriaption}}</p>
+          <h2>{{page[0].expecttitle}}</h2>
+          <p>{{page[0].expectdescriaption}}</p>
         </div>
-     </div>
-     <div class = "col-lg-6 col-12">
+      </div>
+      <div class = "col-lg-6 col-12">
         <div class = "visit-img">
-            <div class ="opacity"></div>
-            <img src = "{{page[0].expectimage}}" width="100%" alt = "img">
+          <div class ="opacity"></div>
+          <img src = "{{page[0].expectimage}}" width="100%" alt = "img">
         </div>
+      </div>
     </div>
-     </div>
-    </div>
+  </div>
 </section>
 <!----------------(Apartment-section6 End)------------------>
 <hr class = "section_hr">
 <!----------------(Apartment-section7 Start)-------------->
 <section id = "apartment-section6">
-
 </section>
 <!----------------(Apartment-section7 End)---------------->
 <hr class = "section_hr">
 <!----------------(Apartment-section8 Start)---------------->
-
-  <section id = "apartment-section8">
-    <div class = "container">
-     <div class = "row">
-     <div class = "col-lg-6 col-12">
+<section id = "apartment-section8">
+  <div class = "container">
+    <div class = "row">
+      <div class = "col-lg-6 col-12">
         <div class = "visit-img1">
-
-            <img src = "{{page[0].marrakechimage}}" width="100%">
+          <img src = "{{page[0].marrakechimage}}" width="100%">
         </div>
-    </div>
-    <div class = "col-lg-6 col-12">
+      </div>
+      <div class = "col-lg-6 col-12">
         <div class = "col2">
-            <h2>{{page[0].marrakechtitle}}</h2>
-            <p>{{page[0].marrakechdescripation}}</p>
-           <button type = "button" class = "btn blue-btn" routerLink = "/visit/studio">{{page[0].marrakechbuttonname}}</button>
-        </div>
-     </div>
-     </div>
-    </div>
-</section>
-<!----------------(Studio-section8 Start)---------------->
-<hr class = "section_hr">
-<!-- Request Appointment Modal -->
-  <div class="modal fade" id="requestModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class = "p-0 text-end">
-          <button type="button" class="close btn" data-bs-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="19" height="17" viewBox="0 0 19 17">
-                <g fill="none" fill-rule="evenodd" stroke="#1B2121" stroke-linecap="square">
-                  <path d="M1.472 16.528L17.528.472M17.528 16.528L1.472.472"></path>
-                </g>
-              </svg></span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <div class = "text-center">
-                <h3>Request an Appointment</h3>
-                <h6>See Beni for yourself</h6>
-            </div>
-            <div class ="row request_checkbox radio_checkbox mt-4">
-                <div class = "col-6">
-                      <div>
-                        <input type="radio" id="test1" name="radio-group" checked>
-                        <label for="test1">The Studio, Marrakech</label>
-                      </div>
-                </div>
-                <div class = "col-6">
-                    <div>
-                        <input type="radio" id="test2" name="radio-group">
-                        <label for="test2">The Apartment, NYC</label>
-                      </div>
-                </div>
-            </div>
-            <div class = "request_form mt-3">
-              <form [formGroup]="requestForm">
-                <div class = "row">
-                    <div class = "col-6 pt-3">
-                        <div class = "form-group">
-                            <label for="exampleFormControlInput1" class="form-label">First Name</label>
-                            <input type="text" class="form-control" placeholder="John" name = "firstname" formControlName = "firstname">
-                            <div *ngIf="requestForm.controls['firstname'].invalid && (requestForm.controls['firstname'].dirty || requestForm.controls['firstname'].touched)"
-                          class="alert alert-danger"> First name is required.
-                        </div>
-                          </div>
-                    </div>
-                    <div class = "col-6 pt-3">
-                        <div class = "form-group">
-                            <label class="form-label">Last Name</label>
-                            <input type="text" class="form-control" placeholder="doe" name = "lastname"  formControlName = "lastname">
-                            <div *ngIf="requestForm.controls['lastname'].invalid && (requestForm.controls['lastname'].dirty || requestForm.controls['lastname'].touched)"
-                            class="alert alert-danger"> Last name is required.
-                          </div>
-                          </div>
-                    </div>
-                    <div class = "col-6 pt-3">
-                        <div class = "form-group">
-                            <label class="form-label">Email</label>
-                           <input type="email" class="form-control" name = "email"   aria-describedby="emailHelp" placeholder="lorem123@gmail.com"  formControlName = "email">
-                           <div *ngIf="requestForm.controls['email'].invalid && (requestForm.controls['email'].dirty || requestForm.controls['email'].touched)"
-                           class="alert alert-danger"> Email address is required.
-                         </div>
-                        </div>
-                    </div>
-                    <div class = "col-6 pt-3">
-                        <div class = "form-group">
-                            <label class="form-label">Mobile</label>
-                            <input type="text" class="form-control" placeholder="1234567890" name = "firstname" formControlName = "mobilenumber" >
-                            <div *ngIf="requestForm.controls['mobilenumber'].invalid && (requestForm.controls['mobilenumber'].dirty || requestForm.controls['mobilenumber'].touched)"
-                            class="alert alert-danger"> Mobile number is required.
-                          </div>
-                        </div>
-                    </div>
-                    <div class = "col-12 pt-3">
-                        <div class="form-group">
-                            <label class="form-label">Comments</label>
-                            <textarea class="form-control"  name = "textarea" placeholder = "Type your message here!" rows="3"  formControlName ="message"></textarea>
-                            <div *ngIf="requestForm.controls['message'].invalid && (requestForm.controls['message'].dirty || requestForm.controls['message'].touched)"
-                            class="alert alert-danger"> Message is required.
-                          </div>
-                          </div>
-                    </div>
-
-                </div>
-                <div class = "my-3 text-center">
-                    <button type = "submit" class="btn blue-btn">Send Enquiry</button>
-                </div>
-            </form>
-
-            </div>
-
-        </div>
-        <div class = "text-center p-2">
-            <p class = "mb-1">
-                If you have any questions, email us at<br> <a href = "#">nyc@benirugs.com</a> or <a href = "#">marrakech@benirugs.com.</a>
-            </p>
+          <h2>{{page[0].marrakechtitle}}</h2>
+          <p>{{page[0].marrakechdescripation}}</p>
+          <button type = "button" class = "btn blue-btn" routerLink = "/studio">{{page[0].marrakechbuttonname}}</button>
         </div>
       </div>
     </div>
   </div>
-
-
+</section>
+<!----------------(Studio-section8 Start)---------------->
+<hr class = "section_hr">
+<!-- Request Appointment Modal -->
+<div class="modal fade" id="requestModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class = "p-0 text-end">
+        <button type="button" class="close btn" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="17" viewBox="0 0 19 17">
+              <g fill="none" fill-rule="evenodd" stroke="#1B2121" stroke-linecap="square">
+                <path d="M1.472 16.528L17.528.472M17.528 16.528L1.472.472"></path>
+              </g>
+            </svg>
+          </span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class = "text-center">
+          <h3>Request an Appointment</h3>
+          <h6>See Beni for yourself</h6>
+        </div>
+        <div class ="row request_checkbox radio_checkbox mt-4">
+          <div class = "col-6">
+            <div>
+              <input type="radio" id="test1" name="radio-group" checked>
+              <label for="test1">The Studio, Marrakech</label>
+            </div>
+          </div>
+          <div class = "col-6">
+            <div>
+              <input type="radio" id="test2" name="radio-group">
+              <label for="test2">The Apartment, NYC</label>
+            </div>
+          </div>
+        </div>
+        <div class = "request_form mt-3">
+          <form [formGroup]="requestForm">
+            <div class = "row">
+              <div class = "col-6 pt-3">
+                <div class = "form-group">
+                  <label for="exampleFormControlInput1" class="form-label">First Name</label>
+                  <input type="text" class="form-control" placeholder="John" name = "firstname" formControlName = "firstname">
+                  <div *ngIf="requestForm.controls['firstname'].invalid && (requestForm.controls['firstname'].dirty || requestForm.controls['firstname'].touched)"
+                    class="alert alert-danger"> First name is required.
+                  </div>
+                </div>
+              </div>
+              <div class = "col-6 pt-3">
+                <div class = "form-group">
+                  <label class="form-label">Last Name</label>
+                  <input type="text" class="form-control" placeholder="doe" name = "lastname"  formControlName = "lastname">
+                  <div *ngIf="requestForm.controls['lastname'].invalid && (requestForm.controls['lastname'].dirty || requestForm.controls['lastname'].touched)"
+                    class="alert alert-danger"> Last name is required.
+                  </div>
+                </div>
+              </div>
+              <div class = "col-6 pt-3">
+                <div class = "form-group">
+                  <label class="form-label">Email</label>
+                  <input type="email" class="form-control" name = "email"   aria-describedby="emailHelp" placeholder="lorem123@gmail.com"  formControlName = "email">
+                  <div *ngIf="requestForm.controls['email'].invalid && (requestForm.controls['email'].dirty || requestForm.controls['email'].touched)"
+                    class="alert alert-danger"> Email address is required.
+                  </div>
+                </div>
+              </div>
+              <div class = "col-6 pt-3">
+                <div class = "form-group">
+                  <label class="form-label">Mobile</label>
+                  <input type="text" class="form-control" placeholder="1234567890" name = "firstname" formControlName = "mobilenumber" >
+                  <div *ngIf="requestForm.controls['mobilenumber'].invalid && (requestForm.controls['mobilenumber'].dirty || requestForm.controls['mobilenumber'].touched)"
+                    class="alert alert-danger"> Mobile number is required.
+                  </div>
+                </div>
+              </div>
+              <div class = "col-12 pt-3">
+                <div class="form-group">
+                  <label class="form-label">Comments</label>
+                  <textarea class="form-control"  name = "textarea" placeholder = "Type your message here!" rows="3"  formControlName ="message"></textarea>
+                  <div *ngIf="requestForm.controls['message'].invalid && (requestForm.controls['message'].dirty || requestForm.controls['message'].touched)"
+                    class="alert alert-danger"> Message is required.
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class = "my-3 text-center">
+              <button type = "submit" class="btn blue-btn">Send Enquiry</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class = "text-center p-2">
+        <p class = "mb-1">
+          If you have any questions, email us at<br> <a href = "#">nyc@benirugs.com</a> or <a href = "#">marrakech@benirugs.com.</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
