--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,7 +79,7 @@ h1, .h1 {
 
   h6, .h6 {
     font-size: 16px !important;
-    line-height: 20px !important;
+    line-height: 24px !important;
     letter-spacing: 0.03rem;
 	font-weight: 500 !important;
   }
@@ -3099,14 +3099,14 @@ border-bottom: 1px solid #e8e4dd;
 	  }
 	  h4, .h4 {
 		font-size: 20px !important;
-		line-height: 26px !important;
+		line-height: 28px !important;
 	  }
 	  h5, .h5 {
 		font-size: 18px !important;
-		line-height: 25px !important;
+		line-height: 26px !important;
 	  }
 	  h6, .h6 {
-		font-size: 17px !important;
+		font-size: 16px !important;
 		line-height: 24px !important;
 	  }
 	p {
@@ -3132,7 +3132,7 @@ border-bottom: 1px solid #e8e4dd;
 	}
 
 	#section6 .hover-effect{
-		padding:0.7rem 0rem;
+		padding:0rem;
 	}
 
 	.blue-btn{
@@ -3281,7 +3281,7 @@ footer {
 	  }
 	  h2, .h2 {
 		font-size: 30px !important;
-		line-height: 33px !important;
+		line-height: 34px !important;
 	  }
 	  h3, .h3 {
 		font-size: 24px !important;
@@ -3289,15 +3289,15 @@ footer {
 	  }
 	  h4, .h4 {
 		font-size: 20px !important;
-		line-height: 26px !important;
+		line-height: 28px !important;
 	  }
 	  h5, .h5 {
 		font-size: 17px !important;
-		line-height: 24px !important;
+		line-height: 25px !important;
 	  }
 	  h6, .h6 {
 		font-size: 16px !important;
-		line-height: 23px !important;
+		line-height: 24px !important;
 	  }
 	 
 
@@ -3603,11 +3603,11 @@ footer {
 	  }
 	  h4, .h4 {
 		font-size: 18px !important;
-		line-height: 25px !important;
+		line-height: 26px !important;
 	  }
 	  h5, .h5 {
 		font-size: 16px !important;
-		line-height: 23px !important;
+		line-height: 24px !important;
 	  }
 	  h6, .h6 {
 		font-size: 15px !important;
@@ -3695,11 +3695,11 @@ footer {
 	}
 	h4, .h4 {
 	  font-size: 18px !important;
-	  line-height: 25px !important;
+	  line-height: 26px !important;
 	}
 	h5, .h5 {
 	  font-size: 16px !important;
-	  line-height: 23px !important;
+	  line-height: 24px !important;
 	}
 	h6, .h6 {
 	  font-size: 15px !important;
