--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -61,12 +61,12 @@
                 <hr>
                 <li class = "d-flex justify-content-between py-2">
                     <p>Standard Shipping</p>
-                    <p><span>€10</span></p>
+                    <p><span>€0</span></p>
                 </li>
                 <hr>
                 <li class = "d-flex justify-content-between py-2">
                     <p class = "mb-0">Total</p>
-                    <h5 class = "mb-0"><span>€{{cart.Totalamount+10}}</span></h5>
+                    <h5 class = "mb-0"><span>€{{cart.Totalamount}}</span></h5>
                 </li>
                 <hr>
                 </ul>
