--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -97,7 +97,7 @@
                                          </div>
                                          <div class = "col-md-4 col-12">
                                              <div class="form-group py-2">
-                                                 <select class="form-select select_country" formControlName="country" (change)="countryChange(addressForm.controls['country'].value)">
+                                                 <select class="form-select select_country" (change)="shippingCost(addressForm.controls['country'].value)" formControlName="country" (change)="countryChange(addressForm.controls['country'].value)">
                                                      <option value="" selected="">Country</option>
                                                      <option *ngFor="let country of country_list; let i = index;" value="{{country.name}}">{{country.name}}</option>
                                                      <!-- <option value="1">India</option>
@@ -294,12 +294,12 @@
                 <hr>
                 <li class = "d-flex justify-content-between py-2">
                     <p class = "mb-0">Standard Shipping</p>
-                    <p class = "mb-0"><span>€10</span></p>
+                    <p class = "mb-0"><span>€{{shipping_cost}}</span></p>
                 </li>
                 <hr>
                 <li class = "d-flex justify-content-between py-2">
                     <p class = "mb-0">Total</p>
-                    <h5 class = "mb-0"><span>€{{cart.Totalamount+10}}</span></h5>
+                    <h5 class = "mb-0"><span>€{{total_amount}}</span></h5>
                 </li>
                 <hr>
                 </ul>
