--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,13 @@
 <!----------------(Banner Start)------------------>
-<app-banner></app-banner>
+<section id = "banner-section">
+  <div class = "container text-center">
+    <h1 class = "mb-0">We provide Ultimate Patterns & Cosy Rugs</h1>
+    <h6 class = "py-4 mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy
+      text of the printing and typesetting industry.
+    </h6>
+    <button type = "button" class= "btn black-btn">Find More</button>
+  </div>
+</section>
 <!----------------(Banner End)------------------>
 <hr class = "section_hr">
 <!-----------Section1 Start---------->
