--- a/src/app/page/privacy-policy/privacy-policy.component.html
+++ b/src/app/page/privacy-policy/privacy-policy.component.html
@@ -1,11 +1,5 @@
 <!--------------Product List banner Start------------->
-<section id = "privacy_banner">
-    <div class = "container">
-      <div class = "text-center">
-        <h1 class = "text-light">Privacy Policy</h1>
-      </div>
-    </div>
-  </section>
+<app-banner ></app-banner>
   <!--------------Product List banner End------------->
   <hr class = "section_hr">
   <section id = "privacy_section">
