--- a/src/app/page/visit-us/the-apartment/the-apartment.component.html
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.html
@@ -1,5 +1,5 @@
 <!----------------(Banner Start)------------------>
-<app-banner></app-banner>
+<app-banner [banner]="banner"  *ngIf="banner.length != null"></app-banner>
 <!----------------(Banner End)------------------>
 <!----------------(studio-section1 Start)---------------->
 <hr class = "section_hr">
