--- a/src/app/page/visit-us/the-studio/the-studio.component.html
+++ b/src/app/page/visit-us/the-studio/the-studio.component.html
@@ -1,6 +1,6 @@
 
 <!----------------(Banner Start)------------------>
-<app-banner></app-banner>
+<app-banner [banner]="banner"  *ngIf="banner.length != null"></app-banner>
 <!----------------(Banner End)------------------>
 
 <!----------------(studio-section1 Start)---------------->
